  * Release ImageMagick version 7.0.10-2, GIT revision 17082:eebcee8e:20200321.

2020-03-16  7.0.10-2 Cristy  <quetzlzacatenango@image...>
  * Fixed another sizing issue with the label coder when pointsize is set.
  * Respect explicit image filename modified (e.g. png24:im.png) (reference
    https://github.com/ImageMagick/ImageMagick/issues/1835).

2020-03-15  7.0.10-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-1, GIT revision 17065:130e52e:20200315.

2020-03-14  7.0.10-1 Cristy  <quetzlzacatenango@image...>
  * Add support for returning the convex hull of an image with the
    %[canvas-hull] property.

2020-03-09  7.0.10-1 Dirk Lemstra <dirk@lem.....org>
  * Added option to specify the preferred version when writing a PDF file with
    -define pdf:version=version (e.g. 1.7).

2020-03-07  7.0.10-1 Cristy  <quetzlzacatenango@image...>
  * Do not throw exception on empty draw path (reference
    https://github.com/ImageMagick/ImageMagick/issues/974).
  * Fix possible buffer overflow in ComplexImages().
  * SVG to MVG requires transforms to appear before clipping paths (reference
    https://github.com/ImageMagick/ImageMagick/issues/1860).

2020-03-06  7.0.10-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-0, GIT revision 17026:fd430ac9a:20200307

2020-03-01  7.0.10-0 Cristy  <quetzlzacatenango@image...>
  * Label text no longer gets cut-off (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37621).
  * Prevent heap overflow (reference
     https://github.com/ImageMagick/ImageMagick/issues/1857).

2020-02-29  7.0.9-27 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-27, GIT revision 17006:49d81b672:20200229

2020-02-24  7.0.9-27 Cristy  <quetzlzacatenango@image...>
  * Make sure we can grok this Fx expression: 1- -2.
  * Do not advance when substituting a NULL string.
  * Correct alpha for named colors in the Q32 non-HDRI build.